@@ -257,6 +257,8 @@ whatever.)</li>
 <li>twill-sh silence</li>
 <li>__url__</li>
 <li>submit on forms w/o submit button? (helgon...)</li>
+<li>execute directories/directory trees?</li>
+<li>switch between executing all files &amp; stopping on first error.</li>
 </ol>
 </blockquote>
 <p>Contributions are welcome &amp; will be duly acknowledged!</p>
